--- a/package.json
+++ b/package.json
@@ -5,27 +5,26 @@
   "author": "Sebastian Chwastek",
   "license": "MIT",
   "scripts": {
-    "prod:update-customers": "cross-env NODE_ENV=production node ./scripts/update-customers-script.js updateCustomers",
-    "dev:update-customers": "cross-env NODE_ENV=development node ./scripts/update-customers-script.js updateCustomers",
+    "prod:update-products": "cross-env NODE_ENV=production node ./scripts/update-products.js",
+    "dev:update-products": "cross-env NODE_ENV=development node ./scripts/update-products.js",
     "test": "cross-env NODE_ENV=test mocha ./test"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "better-sqlite3": "^6.0.1",
-    "cheerio": "^1.0.0-rc.3",
-    "cross-env": "^6.0.3",
-    "make-runnable": "^1.3.8",
-    "uuid": "^7.0.3",
-    "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.0"
+    "axios": "^1.1.2",
+    "better-sqlite3": "^7.6.2",
+    "cheerio": "^1.0.0-rc.12",
+    "cross-env": "^7.0.3",
+    "uuid": "^9.0.0",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-base": "^14.2.0",
-    "eslint-plugin-import": "^2.22.1",
-    "mocha": "^6.2.3",
-    "nock": "^12.0.3"
+    "chai": "^4.3.6",
+    "eslint": "^8.25.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "mocha": "^10.0.0",
+    "nock": "^13.2.9"
   },
   "private": true
 }
